tests/errors/semantic/blocking/ADD_SET_INCOMPATIBLE_TYPES_2.py
# pylint: disable=missing-function-docstring, missing-module-docstring

a = {1.6, 2.4, 3.4}
b = 5
a.add(b)
